<resources>
    <string name="app_name">BasketBall</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_match_list">MatchListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_team_status">TeamStatusActivity</string>

    <string-array name="market">
        <item>沪深</item>
        <item>港股</item>
        <item>美股</item>
    </string-array>

    <string-array name="home_navigation_title">
        <item>自选</item>
        <item>市值</item>
        <item>涨幅</item>
        <item>BTC</item>
        <item>ETH</item>
        <item>EOS</item>
        <item>火币</item>
        <item>币安</item>
        <item>Bitfinex</item>
    </string-array>
    <string-array name="currency_trend">
        <item>分时</item>
        <item>日K</item>
        <item>周K</item>
        <item>月K</item>
    </string-array>
    <string-array name="currency_line">
        <item>开：</item>
        <item>高：</item>
        <item>量：</item>
        <item>收：</item>
        <item>低：</item>
        <item>幅：</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_currency">币种名称</string>
    <string name="current_price">现价</string>
    <string name="increase_amount">涨幅</string>
    <string name="market">行情</string>
    <string name="add_currency">+添加币种</string>
    <string name="share">分享</string>
    <string name="optional">+自选</string>
    <string name="hint_text">输入币名/交易所搜索</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_currency">热门币种</string>
    <string name="select_trade">从交易所中选择</string>
</resources>
