<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:background="@color/grey_e"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/TextGrey14"
        android:layout_width="0dp"
        android:text="@string/name_currency"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        style="@style/TextGrey14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_price"
        android:layout_weight="1" />

    <TextView
        style="@style/TextGrey14"
        android:layout_width="0dp"
        android:text="@string/increase_amount"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>