<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_13"
        tools:context="com.cf.basketball.fragment.DefaultSearchFragment">

        <com.example.admin.basic.view.ObservableScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:text="@string/search_history"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <com.example.admin.basic.view.MeasureRecyclerView
                    android:id="@+id/mrv_search_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:text="@string/hot_currency"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <com.example.admin.basic.view.MeasureRecyclerView
                    android:id="@+id/mrv_search_hot_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:text="@string/select_trade"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <com.example.admin.basic.view.MeasureRecyclerView
                    android:id="@+id/mrv_search_trade_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_15" />
            </LinearLayout>
        </com.example.admin.basic.view.ObservableScrollView>

    </FrameLayout>
</layout>